2016-04-15  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU and uk_UA translations from Igor Voytovich.

2016-04-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.13 released.

2016-04-14  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.7.12 released.

2016-04-11  Carl Hetherington  <cth@carlh.net>

	* Hopefully fix strange limits on x/y offset of subtitles.

	* Add UTC-3:30 timezone to Cinema configuration (#831).

	* Add option to preview left or right eye (#809).

2016-04-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.11 released.

2016-04-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.10 released.

2016-04-08  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-04-07  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-04-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.9 released.

2016-04-05  Carl Hetherington  <cth@carlh.net>

	* Support bold in DCP subtitles.

2016-04-04  Carl Hetherington  <cth@carlh.net>

	* Fix failure to keep italic etc. going across
	multiple lines of a SubRip subtitle (#837).

2016-04-01  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2016-03-28  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from Rov (若文).

2016-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.8 released.

2016-03-21  Carl Hetherington  <cth@carlh.net

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* New zh_CN translation from 若文.

2016-03-20  Carl Hetherington  <cth@carlh.net>

	* Updated pt_PT translation from Tiago Casal Ribeiro.

	* Version 2.7.7 released.

2016-03-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.6 released.

2016-03-18  c.hetherington  <cth@carlh.net>

	* Add first part of pt_BR translation from Thiago Andre.
