@@ -167,6 +167,8 @@ AudioPanel::film_content_changed (int property)
 		}
 
 		setup_sensitivity ();
+	} else if (property == AudioContentProperty::AUDIO_VIDEO_FRAME_RATE) {
+		setup_description ();
 	}
 }
 
